Foram feitas algumas alterações para que o build de produção fosse gerado corretamente.