@@ -16,7 +16,8 @@
 	<description>Aplicação utilizada para automatizar as ações relacionadas as férias dos funcionários</description>
 
 	<properties>
-		<java.version>12</java.version>
+		<!--java.version>12</java.version-->
+		<java.version>1.8</java.version>
 		<swagger2.version>2.9.2</swagger2.version>
 	</properties>
 
@@ -132,8 +133,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<release>${java.version}</release>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<!--release>${java.version}</release>
+					<compilerArgs>/-/-enable-preview</compilerArgs-->
+					<source>${java.version}</source>
+          			<target>${java.version}</target>
 				</configuration>
 			</plugin>
 			<plugin>
